--- a/src/Hackathon_CV_Portal.Web/Views/Account/Register.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/Register.cshtml
@@ -43,8 +43,15 @@
                         <label asp-for="ConfirmPassword" class="control-label"></label>
                         <input asp-for="ConfirmPassword" class="form-control" />
                         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-                    </div>
-
+                    </div>    
+                    <div class="form-group">
+                            <div class="checkbox">
+                                <label asp-for="IsCompany">
+                                    <input asp-for="IsCompany" />
+                                    @Html.DisplayNameFor(m => m.IsCompany)
+                                </label>
+                            </div>
+                        </div>
                     <div class="form-group">
                         <input class="btn btn-outline-success float-right" type="submit" value="Sign up" />
                     </div>
