--- a/src/Hackathon_CV_Portal.Web/Views/Account/Profile.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/Profile.cshtml
@@ -6,5 +6,5 @@
 
 @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()))
 {
-   <a class="btn btn-primary" asp-controller="Vcanshy" asp-action="Add">Add</a>
+   <a class="btn btn-primary" asp-controller="Vacancy" asp-action="Add">Add</a>
 }
