--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
@@ -1,51 +1,130 @@
 ﻿@using Hackathon_CV_Portal.Application.Implementations.Vacancies.Models;
+@using Hackathon_CV_Portal.Domain.Enums
+@using Hackathon_CV_Portal.Domain.Users
+@using Microsoft.AspNetCore.Identity
+@using System.Security.Claims
+@inject SignInManager<ApplicationUser> SignInManager
 @model VacansyVM
-
-
-@using (Html.BeginForm("Index", "Vacancy", FormMethod.Get))
-{
-    <p>
-        კატეგორია: @Html.TextBox("searchCategory", ViewBag.CurrentFilter as string)
-        <input type="submit" value="ძებნა" />
-    </p>
+@*@using (Html.BeginForm("Index", "Vacancy", FormMethod.Get))
+                            {
+                                <p>
+                                    კატეგორია: @Html.TextBox("searchCategory", ViewBag.CurrentFilter as string)
+                                    <input type="submit" class="border-0" value="ძებნა" />
+                                </p>
+                            }*@
+@using (Html.BeginForm("Index", "Vacancy", FormMethod.Get)){
+    <div class="container-xxl bg-white p-0" bgcolor="#800000">
+        <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
+            <div class="container">
+                <div class="row g-2">
+                    <div class="col-md-10">
+                        <div class="row g-2">
+                            <div class="col-md-4">
+                                <p>
+                                    კატეგორია: @Html.TextBox("searchCategory", ViewBag.CurrentFilter as string, "კატეგორია")
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        @*<button class="btn btn-dark border-0 w-100"><a href="" document.getElementById("myText")>Search</button>*@
+                            <input type="submit" class="form-control border-0" value="ძებნა" />
+                    </div>
+                </div>
+            </div>
+        </div>
+     </div>
 }
+    <div class="container-xxl py-5">
+    <div class="container">
+        <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">ვაკანსიები</h1>
 
-<table class="table table-striped">
- <thead>
-        <tr>
-            <th>Title</th>
-            <th>Salary</th>
-            <th>Currency</th>
-            <th>Category</th>
-            <th>Detail</th>
-        </tr>
-    </thead>
-    <tbody>
-         @foreach (var vacancy in Model.VacancyModels)
-        {
-            <tr>
-                <td>
-                    <p class="pull-right">@vacancy.Title</p>
-                </td>
-                <td>
-                    <p class="pull-right">@vacancy.Salary</p>
-                </td>
-                <td>
-                    <p class="pull-right">@vacancy.Currency</p>
-                </td>
-                <td>
-                    <p class="pull-right">@vacancy.Category</p>
-                </td>
-                <td>
-                    <a class="btn btn-primary" asp-controller="Vacansy" asp-action="Detail" asp-route-id="@vacancy.Id">Detail</a>
-                </td>
-                
-            </tr>
-        }
-    </tbody>
-</table>
+        <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.3s">
+            <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
+            <li class="nav-item">
+                <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#tab-2">
+                    <h6 class="mt-n1 mb-0"><a class="page-link" href="?vacancyType=FullTime">Full Time</a></h6>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="d-flex align-items-center text-start mx-3 me-0 pb-3" data-bs-toggle="pill" href="#tab-3">
+                    <h6 class="mt-n1 mb-0"><a class="page-link" href="?vacancyType=PartTime">Part Time</a></h6>
+                </a>
+            </li>
+        </ul>
+        <div class="tab-content">
+            <div id="tab-1" class="tab-pane fade show p-0 active">
+             @foreach (var vacancy in Model.VacancyModels)
+            {
+                <div class="job-item p-3 mb-2 bg-light text-dark">
+                    <div class="row g-4">
+                        <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                            <div class="text-start ps-4">
+                                <h5 class="mb-3">@vacancy.Title</h5>
+                                <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>@vacancy.Location</span>
+                                <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>@vacancy.Type</span>
+                                <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>@vacancy.SalaryRange</span>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
+                            <div class="d-flex mb-3">
+                                <a class="btn btn-light btn-square me-3" asp-controller="Vacancy" asp-action="AddFavourite" asp-route-id="@vacancy.Id"><i class="far fa-heart text-primary"></i></a>
+                                <a class="btn btn-primary me-2" asp-controller="Vacancy" asp-action="Apply" asp-route-id="@vacancy.Id">Apply Now</a>
+                                <a class="btn btn-info me-2" asp-controller="Vacancy" asp-action="Details" asp-route-id="@vacancy.Id">დეტალები</a>
 
-<nav aria-label="Page navigation example">
+                                 @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()))
+                                {
+                                    <a class="btn btn-warning me-2" asp-controller="Vacancy" asp-action="Edit" asp-route-id="@vacancy.Id">რედაქტირება</a>
+                                }
+                                @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()) || User.HasClaim(ClaimTypes.Role, UserRole.Admin.ToString()))
+                                {
+                                    <a class="btn btn-danger me-2" asp-controller="Vacancy" asp-action="Delete" asp-route-id="@vacancy.Id">წაშლა</a>
+                                }
+                            </div>
+                            <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>@vacancy.DeadLine</small>
+                        </div>
+                    </div>
+                </div>
+                @*<tr class="event-wrap">
+                    <td class="meta">
+                        <p class="pull-right">@vacancy.Title</p>
+                    </td>
+                    <td class="meta">
+                        <p class="pull-right">@vacancy.Salary</p>
+                    </td>
+                    <td class="meta">
+                        <p class="pull-right">@vacancy.Currency</p>
+                    </td>
+                    <td class="meta">
+                        <p class="pull-right">@vacancy.Category</p>
+                    </td>
+                    <td class="meta">
+                        <a class="btn btn-primary" asp-controller="Vacansy" asp-action="Detail" asp-route-id="@vacancy.Id">Detail</a>
+                    </td>
+                    @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()))
+                    {
+                        <td class="meta">
+                            <a class="btn btn-primary" asp-controller="Vacancy" asp-action="Edit">რედაქტირება</a>
+                        </td>
+                    }
+                    @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()) || User.HasClaim(ClaimTypes.Role, UserRole.Admin.ToString()))
+                    {
+                        <td class="meta">
+                            <a class="btn btn-primary" asp-controller="Vacancy" asp-action="Delete" asp-route-id="@vacancy.Id">წაშლა</a>
+                        </td>
+                    }
+                </tr>*@
+            }
+        </div>
+        </div>
+         </div>
+    </div>
+</div>
+@*</table>*@ 
+
+
+
+<nav aria-label="Page navigation example" class="text-center ">
   <ul class="pagination">
       @for(int i=1; i<=Model.TottalPages; i++)
       {
@@ -54,4 +133,5 @@
   </ul>
 </nav>
 
+</div>
 
