--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
@@ -70,7 +70,7 @@
                             <div class="d-flex mb-3">
                                 <a class="btn btn-light btn-square me-3" asp-controller="Vacancy" asp-action="AddFavourite" asp-route-id="@vacancy.Id"><i class="far fa-heart text-primary"></i></a>
                                 <a class="btn btn-primary me-2" asp-controller="Vacancy" asp-action="Apply" asp-route-id="@vacancy.Id">Apply Now</a>
-                                <a class="btn btn-info me-2" asp-controller="Vacancy" asp-action="Details" asp-route-id="@vacancy.Id">დეტალები</a>
+                                <a class="btn btn-info me-2" asp-controller="Vacancy" asp-action="Detail" asp-route-id="@vacancy.Id">დეტალები</a>
 
                                  @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()))
                                 {
