add favourite func

--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Detail.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Detail.cshtml
@@ -48,6 +48,7 @@
                         </div>
                     </form>
                 </div>*@
+                <a class="btn btn-primary me-2" asp-controller="Vacancy" asp-action="Apply" asp-route-id="@Model.Id">Apply Now</a>
             </div>
 
         </div>
