--- a/src/Hackathon_CV_Portal.Web/Views/Account/Login.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/Login.cshtml
@@ -5,6 +5,8 @@
     ViewData["Title"] = "Login";
 }
 
+@using (Html.BeginForm(new { ReturnAcction = ViewBag.ReturnAcction, ReturnController = ViewBag.ReturnController,  RouteId = ViewBag.routeId }))
+{
 <div class="row">
     <div class="col-md-6 offset-lg-3 offset-md-2">
         <div class="row">
@@ -79,6 +81,7 @@
         </div>
     </div>
 </div>
+}
 
 @section Scripts {
 <partial name="_ValidationScriptsPartial" />
