--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Detail.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Detail.cshtml
@@ -5,9 +5,10 @@
     <div class="container">
         <div class="row gy-5 gx-4">
             <div class="col-lg-8">
-                <div class="d-flex align-items-center mb-5">
-                    <div class="text-start ps-4">
-                        <h3 class="mb-3">@Model.Category</h3>
+                <div class="mb-5">
+                    <div class="text-start">
+                        <h3 class="mb-3">@Model.CompanyName</h3>
+                        <h3 class="mb-4">@Model.Category</h3>
                         <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>@Model.Location</span>
                         <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>@Model.Type</span>
                         <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$123 - $456</span>
