--- a/src/Hackathon_CV_Portal.Web/Views/Account/Login.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/Login.cshtml
@@ -13,9 +13,8 @@
             <div class="col-md-8 offset-lg-2 offset-md-1">
                 <section>
                     <form asp-action="LogIn" method="post">
-                        <h4>Use a local account to log in.</h4>
+                        <h4>ავტორიზაცია</h4>
                         <hr />
-                        <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="form-group">
                             <label asp-for="UserName"></label>
                             <input asp-for="UserName" class="form-control" />
