--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
@@ -5,13 +5,7 @@
 @using System.Security.Claims
 @inject SignInManager<ApplicationUser> SignInManager
 @model VacansyVM
-@*@using (Html.BeginForm("Index", "Vacancy", FormMethod.Get))
-                            {
-                                <p>
-                                    კატეგორია: @Html.TextBox("searchCategory", ViewBag.CurrentFilter as string)
-                                    <input type="submit" class="border-0" value="ძებნა" />
-                                </p>
-                            }*@
+
 @using (Html.BeginForm("Index", "Vacancy", FormMethod.Get)){
     <div class="container-xxl bg-white p-0" bgcolor="#800000">
         <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
@@ -27,7 +21,6 @@
                         </div>
                     </div>
                     <div class="col-md-2">
-                        @*<button class="btn btn-dark border-0 w-100"><a href="" document.getElementById("myText")>Search</button>*@
                             <input type="submit" class="form-control border-0" value="ძებნა" />
                     </div>
                 </div>
@@ -68,22 +61,25 @@
                         </div>
                         <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
                             <div class="d-flex mb-3">
-                                @if (@vacancy.IsFavourite)
+                                @if (@vacancy.IsFavourite && User.HasClaim(ClaimTypes.Role, UserRole.User.ToString()))
                                 {
                                     <a class="btn btn-light btn-square me-3" asp-controller="Vacancy" asp-action="RemoveFavourite" asp-route-id="@vacancy.Id"><i class=" far fa-heart text-primary bi-suit-heart-fill" ></i></a>
                                 }
-                                else
+                                else if(User.HasClaim(ClaimTypes.Role, UserRole.User.ToString()))
                                 {
                                     <a class="btn btn-light btn-square me-3" asp-controller="Vacancy" asp-action="AddFavourite" asp-route-id="@vacancy.Id"><i class=" far fa-heart text-primary" ></i></a>
                                 }
-                                <a class="btn btn-primary me-2" asp-controller="Vacancy" asp-action="Apply" asp-route-id="@vacancy.Id">Apply Now</a>
+                                @if(User.HasClaim(ClaimTypes.Role, UserRole.User.ToString()) || !SignInManager.IsSignedIn(User))
+                                {
+                                    <a class="btn btn-primary me-2" asp-controller="Vacancy" asp-action="Apply" asp-route-id="@vacancy.Id">Apply Now</a>
+                                }
                                 <a class="btn btn-info me-2" asp-controller="Vacancy" asp-action="Detail" asp-route-id="@vacancy.Id">დეტალები</a>
 
-                                 @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()))
+                                @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()) && @vacancy.UserId == int.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier)))
                                 {
                                     <a class="btn btn-warning me-2" asp-controller="Vacancy" asp-action="Edit" asp-route-id="@vacancy.Id">რედაქტირება</a>
                                 }
-                                @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()) || User.HasClaim(ClaimTypes.Role, UserRole.Admin.ToString()))
+                                @if ((User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()) && @vacancy.UserId == int.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier))) || User.HasClaim(ClaimTypes.Role, UserRole.Admin.ToString()))
                                 {
                                     <a class="btn btn-danger me-2" asp-controller="Vacancy" asp-action="Delete" asp-route-id="@vacancy.Id">წაშლა</a>
                                 }
@@ -92,42 +88,12 @@
                         </div>
                     </div>
                 </div>
-                @*<tr class="event-wrap">
-                    <td class="meta">
-                        <p class="pull-right">@vacancy.Title</p>
-                    </td>
-                    <td class="meta">
-                        <p class="pull-right">@vacancy.Salary</p>
-                    </td>
-                    <td class="meta">
-                        <p class="pull-right">@vacancy.Currency</p>
-                    </td>
-                    <td class="meta">
-                        <p class="pull-right">@vacancy.Category</p>
-                    </td>
-                    <td class="meta">
-                        <a class="btn btn-primary" asp-controller="Vacansy" asp-action="Detail" asp-route-id="@vacancy.Id">Detail</a>
-                    </td>
-                    @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()))
-                    {
-                        <td class="meta">
-                            <a class="btn btn-primary" asp-controller="Vacancy" asp-action="Edit">რედაქტირება</a>
-                        </td>
-                    }
-                    @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()) || User.HasClaim(ClaimTypes.Role, UserRole.Admin.ToString()))
-                    {
-                        <td class="meta">
-                            <a class="btn btn-primary" asp-controller="Vacancy" asp-action="Delete" asp-route-id="@vacancy.Id">წაშლა</a>
-                        </td>
-                    }
-                </tr>*@
             }
         </div>
         </div>
          </div>
     </div>
 </div>
-@*</table>*@ 
 
 
 
