--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
@@ -61,6 +61,9 @@
                               <li class="nav-item">
                                    <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Index">ჩემი CV</a>
                                </li>
+                               <li class="nav-item">
+                                   <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Create">CV-ს შექმნა</a>
+                               </li>
                         }
                     </ul>
                 </div>
