--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Detail.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Detail.cshtml
@@ -11,7 +11,7 @@
                         <h3 class="mb-4">@Model.Category</h3>
                         <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>@Model.Location</span>
                         <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>@Model.Type</span>
-                        <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$123 - $456</span>
+                        <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>@Model.SalaryRange</span>
                     </div>
                 </div>
 
@@ -49,7 +49,7 @@
                         </div>
                     </form>
                 </div>*@
-                <a class="btn btn-primary me-2" asp-controller="Vacancy" asp-action="Apply" asp-route-id="@Model.Id">Apply Now</a>
+                <a class="btn btn-primary me-2" asp-controller="AppliedCurriculumVitae" asp-action="Apply" asp-route-id="@Model.Id">Apply Now</a>
             </div>
 
         </div>
