--- a/src/Hackathon_CV_Portal.Web/Views/AppliedCurriculumVitae/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/AppliedCurriculumVitae/Index.cshtml
@@ -1,34 +1,11 @@
-﻿@using Hackathon_CV_Portal.Application.Implementations.Vacancies.Models;
+﻿@using Hackathon_CV_Portal.Application.Implementations.AppliedCurriculumVitaes.Models
 @using Hackathon_CV_Portal.Domain.Enums
 @using Hackathon_CV_Portal.Domain.Users
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
 @inject SignInManager<ApplicationUser> SignInManager
-@model VacansyVM
+@model AppliedCurriculumVitaesVM
 
-
-@using (Html.BeginForm("Index", "Vacancy", FormMethod.Get)){
-    <div class="container-xxl bg-white p-0" bgcolor="#800000">
-        <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
-            <div class="container">
-                <div class="row g-2">
-                    <div class="col-md-10">
-                        <div class="row g-2">
-                            <div class="col-md-4">
-                                <p>
-                                    კატეგორია: @Html.TextBox("searchCategory", ViewBag.CurrentFilter as string, "კატეგორია")
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                            <input type="submit" class="form-control border-0" value="ძებნა" />
-                    </div>
-                </div>
-            </div>
-        </div>
-     </div>
-}
     <div class="container-xxl py-5">
     <div class="container">
         <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">ვაკანსიები</h1>
@@ -61,21 +38,21 @@
                 }
                 else
                 {
-                    @foreach (var vacancy in Model.VacancyModels)
+                    @foreach (var cv in Model.CurriculumVitaes)
                     {
                         <div class="job-item p-3 mb-2 bg-light text-dark">
                             <div class="row g-4">
                                 <div class="col-sm-12 col-md-8 d-flex align-items-center">
                                     <div class="text-start ps-4">
-                                        <h5 class="mb-3">@vacancy.Title</h5>
-                                        <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>@vacancy.Location</span>
-                                        <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>@vacancy.Type</span>
-                                        <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>@vacancy.SalaryRange</span>
+                                        <h5 class="mb-3">@cv.FirstName @cv.LastName</h5>
+                                        <span class="text-truncate me-3"><i class="bi bi-envelope text-primary me-2"></i>@cv.Email</span>
+                                        <span class="text-truncate me-3"><i class="bi bi-phone text-primary me-2"></i>@cv.PhoneNumber</span>
+                                        <span class="text-truncate me-0"><i class="bi bi-calendar text-primary me-2"></i>@cv.Age</span>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
                                     <div class="d-flex mb-3">
-                                        @if (@vacancy.IsFavourite && User.HasClaim(ClaimTypes.Role, UserRole.User.ToString()))
+                                        @*@if (@vacancy.IsFavourite && User.HasClaim(ClaimTypes.Role, UserRole.User.ToString()))
                                         {
                                             <a class="btn btn-light btn-square me-3" asp-controller="Vacancy" asp-action="RemoveFavourite" asp-route-id="@vacancy.Id"><i class=" far fa-heart text-primary bi-suit-heart-fill" ></i></a>
                                         }
@@ -86,22 +63,18 @@
                                         @if(User.HasClaim(ClaimTypes.Role, UserRole.User.ToString()) || !SignInManager.IsSignedIn(User))
                                         {
                                             <a class="btn btn-primary me-2" asp-controller="AppliedCurriculumVitae" asp-action="Apply" asp-route-id="@vacancy.Id">Apply Now</a>
-                                        }
-                                        <a class="btn btn-info me-2" asp-controller="Vacancy" asp-action="Detail" asp-route-id="@vacancy.Id">დეტალები</a>
-                                        @if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()) && @vacancy.UserId == int.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier)))
+                                        }*@
+                                        <a class="btn btn-info me-2" asp-controller="CurriculumVitae" asp-action="Index" asp-route-cvId="@cv.Id">დეტალები</a>
+                                        @*@if (User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()) && @vacancy.UserId == int.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier)))
                                         {
                                             <a class="btn btn-warning me-2" asp-controller="Vacancy" asp-action="Edit" asp-route-id="@vacancy.Id">რედაქტირება</a>
                                         }
                                         @if ((User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString()) && @vacancy.UserId == int.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier))) || User.HasClaim(ClaimTypes.Role, UserRole.Admin.ToString()))
                                         {
                                             <a class="btn btn-danger me-2" asp-controller="Vacancy" asp-action="Delete" asp-route-id="@vacancy.Id">წაშლა</a>
-                                        }
-                                        @if ((User.HasClaim(ClaimTypes.Role, UserRole.Company.ToString())) && @vacancy.UserId == int.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier)))
-                                        {
-                                            <a class="btn btn-success me-2" asp-controller="AppliedCurriculumVitae" asp-action="Index" asp-route-vacancyId="@vacancy.Id">გამოგზავნილი ვაკანსიები</a>
-                                        }
-                                        </div>
-                                    <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>@vacancy.DeadLine</small>
+                                        }*@
+                                    </div>
+                                    @*<small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>@vacancy.DeadLine</small>*@
                                 </div>
                             </div>
                         </div>
@@ -114,15 +87,4 @@
 </div>
 
 
-
-<nav aria-label="Page navigation example" class="text-center ">
-  <ul class="pagination">
-      @for(int i=1; i<=Model.TottalPages; i++)
-      {
-          <li class="page-item"><a class="page-link" href="?page=@i">@i</a></li>
-      }
-  </ul>
-</nav>
-
-</div>
 
