--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+            <a id="manage" class="nav-link text-dark" asp-controller="Account" asp-action="Profile" >Hello @User.Identity.Name!</a>
         </li>
         <li class="nav-item">
             <form id="logoutForm" class="form-inline" asp-area="" asp-controller="Account" asp-action="LogOut" method="post" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
