--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
@@ -64,6 +64,15 @@
                                <li class="nav-item">
                                    <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Create">CV-ს შექმნა</a>
                                </li>
+                               <li class="nav-item">
+                                   <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Skill">შენი უნარები</a>
+                               </li>
+                               <li class="nav-item">
+                                   <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Education">შენი განათლება</a>
+                               </li>
+                               <li class="nav-item">
+                                   <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="WorkingExperience">შენი სამუშაო გამოცდილება</a>
+                               </li>
                         }
                     </ul>
                 </div>
