--- a/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/AddWorkingExperience.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/AddWorkingExperience.cshtml
@@ -1,1 +1,52 @@
-﻿
+﻿@using Hackathon_CV_Portal.Web.Models.WorkingExperienceModel
+@model CreateWorkingExperienceDto
+@{
+    ViewData["Title"] = "დაამატე სამუშაო გამოცდილება";
+}
+
+<div class="row">
+            <div class="col-md-8 offset-2">
+                <form asp-action="AddWorkingExperience" method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                    <div class="row">
+                        <div class="form-group">
+                            <label asp-for="Name" class="control-label"></label>
+                            <input asp-for="Name" class="form-control" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="StartDate" class="control-label"></label>
+                            <input asp-for="StartDate" type="date" class="form-control" />
+                            <span asp-validation-for="StartDate" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="EndDate" class="control-label"></label>
+                            <input asp-for="EndDate" type="date" class="form-control" />
+                            <span asp-validation-for="EndDate" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Company" class="control-label"></label>
+                            <input asp-for="Company" class="form-control" />
+                            <span asp-validation-for="Company" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="City" class="control-label"></label>
+                            <input asp-for="City" class="form-control" />
+                            <span asp-validation-for="City" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Description" class="control-label"></label>
+                            <input asp-for="Description" class="form-control" />
+                            <span asp-validation-for="Description" class="text-danger"></span>
+                        </div>
+                        
+                    </div>
+
+                    <div class="form-group">
+                        <input type="submit" value="დამატება" class="btn btn-outline-success float-right" />
+                        <a class="btn btn-outline-secondary" asp-controller="CurriculumVitae"  asp-action="WokrkingExperience">უკან დაბრუნება</a>
+                    </div>
+                </form>
+            </div>
+        </div>
