--- a/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Create.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@model CvVM
-@using Hackathon_CV_Portal.Application.Implementations.Cv.Models;
+﻿@using Hackathon_CV_Portal.Application.Implementations.Cv.Models;
+@model CvVM
 @{
     ViewData["Title"] = "შექმენი CV";
 }
@@ -12,7 +12,7 @@
 
         <div class="row">
             <div class="col-md-8 offset-2">
-                <form asp-action="Create">
+                <form asp-action="Create" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="row">
@@ -50,23 +50,7 @@
                                 <span asp-validation-for="Address" class="text-danger"></span>
                             </div>
 
-                            <div class="form-group">
-                                <label asp-for="WorkingExperience" class="control-label"></label>
-                                <select asp-for="WorkingExperience" class="form-control" multiple asp-items="ViewBag.WorkingExperience"></select>
-                                <span asp-validation-for="WorkingExperience" class="text-danger"></span>
-                            </div>
-                            
-                            <div class="form-group">
-                                <label asp-for="Education" class="control-label"></label>
-                                <select asp-for="Education" class="form-control" multiple asp-items="ViewBag.Education"></select>
-                                <span asp-validation-for="Education" class="text-danger"></span>
-                            </div>   
-
-                            <div class="form-group">
-                                <label asp-for="Skills" class="control-label"></label>
-                                <select asp-for="Skills" class="form-control" multiple asp-items="ViewBag.Skills"></select>
-                                <span asp-validation-for="Skills" class="text-danger"></span>
-                            </div>
+                           
 
                         </div>
                         <div class="col-md-12">
