--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                                    <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Index">ჩემი CV</a>
                                </li>
                                <li class="nav-item">
-                                   <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Create">CV-ს შექმნა</a>
+                                   <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Update">CV-ს შევსება</a>
                                </li>
                                <li class="nav-item">
                                    <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Skill">შენი უნარები</a>
