--- a/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Update.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Update.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Hackathon_CV_Portal.Application.Implementations.Cv.Models;
 @model CvVM
 @{
-    ViewData["Title"] = "შექმენი CV";
+    ViewData["Title"] = "განაახლე CV";
 }
 
 <div class="row">
@@ -12,7 +12,7 @@
 
         <div class="row">
             <div class="col-md-8 offset-2">
-                <form asp-action="Create" method="post">
+                <form asp-action="Update" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="row">
