--- a/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Education.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Education.cshtml
@@ -17,8 +17,8 @@
                         <div class="col-sm-12 col-md-8 d-flex align-items-center">
                             <div class="text-start ps-4">
                                 <h5 class="mb-3">@education.Name</h5>
-                                <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>@education.University</span>
-                                <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>@education.City</span>
+                                <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>@education.City</span>
+                                <span class="text-truncate me-3"><i class="bi bi-book"></i> @education.University</span>
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
