--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
@@ -13,30 +13,32 @@
 
         <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.3s">
 
-            @using (Html.BeginForm("Index", "Vacancy", FormMethod.Get))
+            @if (@Model.WithFil)
             {
-                <div class="container-xxl bg-white p-0" bgcolor="#800000">
-                    <div class="container-fluid mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
-                        <div class="container">
-                            <div class="row">
-                                <div class="">
-                                    <div class="row">
-                                        <div class="">
-                                            <p>კატეგორია</p>
-                                            <p>
-                                              @Html.TextBox("searchCategory", ViewBag.CurrentFilter as string, "კატეგორია")
-                                            </p>
-                                            <input type="submit" class="form-control border-0 bg-primary" value="ძებნა" />
+                @using (Html.BeginForm("Index", "Vacancy", FormMethod.Get))
+                {
+                    <div class="container-xxl bg-white p-0" bgcolor="#800000">
+                        <div class="container-fluid mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="">
+                                        <div class="row">
+                                            <div class="">
+                                                <p>კატეგორია</p>
+                                                <p>
+                                                    @Html.TextBox("searchCategory", ViewBag.CurrentFilter as string, "კატეგორია")
+                                                </p>
+                                                <input type="submit" class="form-control border-0 bg-primary" value="ძებნა" />
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            }
-            <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
-                <li class="nav-item">
+                }
+                <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
+                    <li class="nav-item">
                     <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#tab-2">
                         <h6 class="mt-n1 mb-0"><a class="page-link" href="?vacancyType=FullTime">Full Time</a></h6>
                     </a>
@@ -47,6 +49,7 @@
                     </a>
                 </li>
             </ul>
+            }
             <div class="tab-content">
                 <div id="tab-1" class="tab-pane fade show p-0 active">
                     @if (Model.IsEmpty)
